bad/var_decl_init_invalid_conversion_bool_void.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_bool_void.lat:4:12: [1;31merror: [0;1mincompatible types: cannot assign variable of type `boolean` with an expression of type `void`[m
	boolean x = foo();
	          [1;32m^[m
